...
                  }}
                />

            
            </View>

            <Text>Parkings</Text>
            <View style={styles.doubleColSection}>
            <CustomButtonGroup
                buttons={AppConstant.COMMERCIAL_PARKING_OPTION}
                accessibilityLabelId="commercial_parking_type"
                selectedIndices={[AppConstant.COMMERCIAL_PARKING_OPTION.findIndex(option => option.text === parkingType)]}
                isMultiSelect={false}
...
            <TextInput
              mode="outlined"
              style={styles.inputContainerStyle}
              label="Property Size*"
              keyboardType={"numeric"}
              returnKeyType={"done"}
              placeholder="Property Size"
              value={propertySize}
              // keyboardType={"numeric"}
              onChangeText={text => setPropertySize(text)}
              onFocus={() => setIsVisible(false)}
              theme={{
                colors: {
...
