...
  const Tab = createMaterialBottomTabNavigator();
  const Stack = createStackNavigator();

  return (
    <NavigationContainer>
      <Tab.Navigator
        initialRouteName="Home"
        activeColor="rgb(135,206,235)"
        inactiveColor="rgb(105,105,105)"
        barStyle={{ backgroundColor: "#ffffff", paddingBottom: 0 }}
      >
        <Tab.Screen
          name="Home"
...
              <Ionicons name="notifications-outline" color={color} size={26} />
            )
          }}
        />

        <Tab.Screen
          name="Profile"
          component={ProfileStackScreens}
          options={{
            tabBarLabel: "",
            tabBarIcon: ({ color }) => (
              <MaterialCommunityIcons name="account" color={color} size={26} />
            )
...
