...
              width: "80%",
              height: 45,
              color: "#ffffff",
              fontWeight: "500",
              // borderRadius: 5
              fontSize: 18
            }}>Supercharge Your Property Broking</Text>
          </View>


          <View
            style={{
              flex: 1,
...
          }}
          onPress={() => onSkip()}
        >
          <Text
            style={{ color: "#fff" }}
          >
            Skip
          </Text>
        </TouchableOpacity>
      </ImageBackground>

    </View>

...
