...
        }}
        onPress={() => onSkip()}
      >
        <Text
        style={{ color: "#fff" }}
        >
          Skip
        </Text>
      </TouchableOpacity>
        </ImageBackground>
     
      
    
...
